deploy/overlays/local/node-mumc/components/ehrbase-gateway/ehrbase-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mumc-ehrbase-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: ehrbase.mumc.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mumc-ehrbase-route
spec:
  parentRefs:
    - name: mumc-ehrbase-gateway
  hostnames:
    - ehrbase.mumc.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mumc-ehrbase
          port: 8080
